// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/IconButton IconButton Playground 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        color=""
        css={[Function]}
        data-testid="icon-button"
        disabled={false}
      >
        <span
          css={
            Object {
              "alignItems": "center",
              "display": "flex",
              "justifyContent": "center",
              "padding": "0.125rem",
            }
          }
          onClick={[Function]}
        >
          <span
            css={[Function]}
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/IconButton IconButton Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        color=""
        css={[Function]}
        data-testid="icon-button-size-lg"
        disabled={false}
      >
        <span
          css={
            Object {
              "alignItems": "center",
              "display": "flex",
              "justifyContent": "center",
              "padding": "0.125rem",
            }
          }
          onClick={[Function]}
        >
          <span
            css={[Function]}
          />
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        color=""
        css={[Function]}
        data-testid="icon-button"
        disabled={false}
      >
        <span
          css={
            Object {
              "alignItems": "center",
              "display": "flex",
              "justifyContent": "center",
              "padding": "0.125rem",
            }
          }
          onClick={[Function]}
        >
          <span
            css={[Function]}
          />
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        color=""
        css={[Function]}
        data-testid="icon-button"
        disabled={false}
      >
        <span
          css={
            Object {
              "alignItems": "center",
              "display": "flex",
              "justifyContent": "center",
              "padding": "0.125rem",
            }
          }
          onClick={[Function]}
        >
          <span
            css={[Function]}
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/IconButton IconButton Types 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        color=""
        css={[Function]}
        data-testid="icon-button-size-lg"
        disabled={false}
      >
        <span
          css={
            Object {
              "alignItems": "center",
              "display": "flex",
              "justifyContent": "center",
              "padding": "0.125rem",
            }
          }
          onClick={[Function]}
        >
          <span
            css={[Function]}
          />
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        color=""
        css={[Function]}
        data-testid="icon-button-size-lg"
        disabled={false}
      >
        <span
          css={
            Object {
              "alignItems": "center",
              "display": "flex",
              "justifyContent": "center",
              "padding": "0.125rem",
            }
          }
          onClick={[Function]}
        >
          <span
            css={[Function]}
          />
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        color=""
        css={[Function]}
        data-testid="icon-button-size-lg"
        disabled={false}
      >
        <span
          css={
            Object {
              "alignItems": "center",
              "display": "flex",
              "justifyContent": "center",
              "padding": "0.125rem",
            }
          }
          onClick={[Function]}
        >
          <span
            css={[Function]}
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;
